<resources>
    <string name="app_name">Coin Picker (Tambola)</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="ads_main_screen_ads">ca-app-pub-2786039813382028/1224947954</string>
    <string name="ads_full_screen_ads">ca-app-pub-2786039813382028/6621555921</string>
    <string name="optional_screen_ads">ca-app-pub-2786039813382028/8356409922</string>
    <string name="ticket_screen_ads">ca-app-pub-2786039813382028/8167911507</string>





    <string name="ads_full_screen_ads_dummy">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ads_main_screen_ads_dummy">ca-app-pub-3940256099942544/6300978111</string>
   <!-- <string name="optional_screen_ads_dummy">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ticket_screen_ads_dummy">ca-app-pub-3940256099942544/6300978111</string>
-->

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="play_coin">Play game</string>
    <string name="tickets">Ticket Window</string>
    <string name="info">Dear Players,

We kindly ask you to download the app and generate your ticket directly on your mobile device. This will ensure a smooth and efficient experience for all participants.</string>
    <string name="click_to_play">Click To Play</string>
    <string name="restart">Restart</string>
    <string name="click_here">Click Here</string>
    <string name="speak_numbers">Speak Numbers</string>
    <string name="ganme_zop">ganme_zop</string>
    <string name="game_zop">gamezop\n</string>
</resources>