<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <Button
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/restart"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:padding="4dp"
        android:textColor="@color/black"
        android:text="@string/speak_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_restart" />

    <ImageView
        android:id="@+id/gmZop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/game_zop"
        android:src="@drawable/game_zope"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_restart"
         />


    <TextView
        android:id="@+id/coinTv"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/click_to_play"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:background="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@+id/gmZop"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_end"
        />

    <TextView
        android:id="@+id/lastValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/circle_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coinTv"
        app:layout_constraintBottom_toBottomOf="@+id/coinTv" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/click_here"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/coinTv"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_end"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNumbers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:adUnitId="@string/ads_main_screen_ads"
        ads:adSize="BANNER"/>

</androidx.constraintlayout.widget.ConstraintLayout>